--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@ body{
     margin: 0 auto;
 }
 
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+}
+
 header{
     background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0, 0, 0, 0.3)), url('../images/patio.jpg');
     background-repeat: none;
@@ -54,7 +59,47 @@ header a {
     display: inline-block;
 }
 
-@media (max-width: 900px){
+footer{
+    color: white;
+    background-color: black;
+    padding: 100px 0;
+}
+
+section{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+footer h3{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+footer p {
+    font-weight: 400;
+    font-size: 16px;
+    opacity: 0.7;
+    margin-right: 20px;
+    line-height: 24px;
+}
+
+footer ul {
+    padding: 0;
+}
+
+footer li{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+footer a {
+    color: white;
+    opacity: 0.7;
+}
+
+@media (max-width: 960px){
     header{
         padding: 60px 0;
     }
