--- a/src/styles.css
+++ b/src/styles.css
@@ -10,19 +10,57 @@ body{
 
 .grid{
     display: grid;
-    grid-gap: 64px;
+    grid-gap: 30px;
 }
 
 .grid-2-columns{
     grid-template-columns: auto auto;
 }
 
-.grid-3-columns{
+.grid-3-columns-with-first-narrow{
     grid-template-columns: 1fr 2fr 2fr;
 }
 
+.grid-3-columns{
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card{
+    background: white;
+    margin: 30px 0;
+}
+
+.card-body{
+    padding: 30px;
+}
+
+.card-footer{
+    padding: 0 30px 30px;
+}
+
+.btn {
+    display: block;
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 16px;
+    background-color: #462CB3;
+    text-decoration: none;
+}
+
 .img-responsive{
-    max-width:100%
+    max-width:100%;
+    max-height: 500px;
+}
+
+.card-header .img-responsive{
+    max-width: 100%;
+        object-fit: cover;
+        height: 300px;
 }
 
 header{
@@ -74,6 +112,11 @@ header a {
 main{
     background-color: white;
     padding: 50px;
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 5px;
+        color: black;
 }
 
 main h2{
@@ -94,12 +137,21 @@ main h3{
         margin: 0;
 }
 
-main{
-font-weight: 400;
-    font-size: 16px;
+main h4 {
+    font-weight: 700;
+    font-size: 24px;
     line-height: 1.5;
-    letter-spacing: 5px;
-    color: black;
+    color: #272044;
+    margin: 0;
+}
+
+main h5 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1;
+    color: #272044;
+    margin: 0;
+    padding-top: 40px;
 }
 
 footer{
@@ -108,9 +160,14 @@ footer{
 }
 
 section{
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 100px 0;
+    padding: 60px 50px;
+}
+
+section.secondary{
+    background: #f8f8f8;
+    text-align: center;
 }
 
 footer h3{
