--- a/src/styles.css
+++ b/src/styles.css
@@ -25,9 +25,18 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.embed{
+    width: 100%;
+    max-width: 400px;
+}
+
 .card{
     background: white;
     margin: 30px 0;
+}
+
+.card-header.grid{
+    grid-gap: 0;
 }
 
 .card-body{
@@ -53,13 +62,12 @@ body{
 }
 
 .img-responsive{
-    max-width:100%;
+    width:100%;
     max-height: 500px;
 }
 
 .card-header .img-responsive{
     max-width: 100%;
-        object-fit: cover;
         height: 300px;
 }
 
@@ -218,4 +226,8 @@ footer a {
     section{
         padding: 30px;
     }
+        .card-header .img-responsive {
+            width: 100%;
+            height: 100%;
+        }
 }
